@@ -10,6 +10,7 @@ Version 2.0.2 (9-30-11)
 -Post pagination added to main blog index page. 
 -register_sidebar calls now within a function hooked into widgets_init. 
 -Added styling to definition list title and text elements.
+-Added link to theme settings in the admin bar. 
 
 Version 2.0.1 (8-05-11)
 -Removed TimThumb, replaced with WordThumb for increased security.
